demo/intro/kube/deployAppV2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: appka
spec:
  replicas: 3
  selector:
    matchLabels:
      app: appka
  template:
    metadata:
      labels:
        app: appka
    spec:
      containers:
      - name: appka
        image: mojeskvelekontejnery.azurecr.io/appka:v2
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 100m
            memory: 64M
          limits:
            cpu: 500m
            memory: 256M
