demo/intro/kube/podApp.yaml
kind: Pod
apiVersion: v1
metadata:
  name: appka
spec:
  containers:
    - name: ppka
      image: mojeskvelekontejnery.azurecr.io/appka:v1
