demo/intro/kube/podUbuntu.yaml
kind: Pod
apiVersion: v1
metadata:
  name: ubuntu
spec:
  containers:
    - name: ubuntu
      image: tkubica/mybox
