demo/intro/kube/serviceApp.yaml
kind: Service
apiVersion: v1
metadata:
  name: appka
spec:
  selector:
    app: appka
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
