demo/intro/kube/ingressApp.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
  name: appka
spec:
  rules:
    - host: appka.cloud.tomaskubica.in
      http:
        paths:
          - path: /
            backend:
              serviceName: appka
              servicePort: 80
